added the missing dependenices and supported java 11